feat(notebooks): Implement dynamic plots and refine analysis workflow
Updated data loading notebook to ensure proper database interaction sequence. Modified Insights-Recommendations notebook to use dynamic bank names for visualizations and display plots directly in the notebook output, resolving previous KeyErrors.

--- a/notebooks/store_cleaned_data_oracle.ipynb
+++ b/notebooks/store_cleaned_data_oracle.ipynb
@@ -10,13 +10,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 1,
    "id": "615c9c58",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "import pandas as pd\n",
+    "import cx_Oracle\n",
+    "import logging\n",
+    "import os\n",
+    "import sys\n",
+    "sys.path.append(os.path.abspath(\"../src\"))\n",
     "from oracle_db_manager import OracleDBManager\n",
     "from dotenv import load_dotenv\n"
    ]
@@ -31,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "id": "5e9b5997",
    "metadata": {},
    "outputs": [
@@ -124,7 +128,7 @@
        "4  Google Play Store  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "id": "5bf3d86f",
    "metadata": {},
    "outputs": [
@@ -155,7 +159,7 @@
        "True"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 4,
    "id": "14eacb2d",
    "metadata": {},
    "outputs": [
@@ -190,17 +194,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " Connected to Oracle DB.\n"
+      "Attempting to connect to DSN: localhost:1521/xepdb1 as user: FINTECH_APP_USER\n",
+      "Database connection established.\n"
      ]
     }
    ],
    "source": [
-    "db = OracleDBManager(\n",
-    "    user=os.getenv(\"ORACLE_USER\"),\n",
-    "    password=os.getenv(\"ORACLE_PASSWORD\"),\n",
-    "    dsn=os.getenv(\"ORACLE_DSN\")\n",
-    ")\n",
-    "# Test connection\n",
+    "# Initialize database connection\n",
+    "user = os.getenv(\"ORACLE_USER\")\n",
+    "password = os.getenv(\"ORACLE_PASSWORD\")\n",
+    "dsn = os.getenv(\"ORACLE_DSN\")\n",
+    "\n",
+    "        # Determine connection mode based on the user (as discussed previously)\n",
+    "connection_mode = None\n",
+    "        # You'll need cx_Oracle imported here if you don't already have it\n",
+    "        # For simplicity, assuming cx_Oracle is available for cx_Oracle.SYSDBA\n",
+    "try:\n",
+    "    import cx_Oracle\n",
+    "    if user and user.upper() == \"SYS\":\n",
+    "        connection_mode = cx_Oracle.SYSDBA\n",
+    "except ImportError:\n",
+    "    logging.warning(\"cx_Oracle not imported. Cannot set SYSDBA mode if user is SYS.\")\n",
+    "\n",
+    "logging.info(f\"Attempting to connect with user: {user}, dsn: {dsn}\")\n",
+    "\n",
+    "        # Pass the mode to the OracleDBManager constructor\n",
+    "db = OracleDBManager(user=user, password=password, dsn=dsn, mode=connection_mode)\n",
     "db.connect()"
    ]
   },
@@ -214,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "id": "e6d52f19",
    "metadata": {},
    "outputs": [
@@ -222,7 +241,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " Tables created.\n"
+      "Creating banks table...\n",
+      "Banks table created successfully.\n",
+      "Reviews table already exists, skipping creation.\n"
      ]
     }
    ],
@@ -244,17 +265,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "id": "e473d7fe",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Inserted/updated 3 banks.\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "{'Commercial Bank of Ethiopia': 1, 'Bank of Abyssinia': 2, 'Dashen Bank': 3}"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "id": "8b26d2a0",
    "metadata": {},
    "outputs": [
@@ -283,7 +311,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " Reviews inserted.\n"
+      "Inserted 1106 reviews.\n"
      ]
     }
    ],
@@ -301,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "id": "e50d8f26",
    "metadata": {},
    "outputs": [
@@ -309,7 +337,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " Connected to Oracle DB.\n",
+      "Attempting to connect to DSN: localhost:1521/xepdb1 as user: FINTECH_APP_USER\n",
+      "Database connection established.\n",
       "Review count: 1106\n"
      ]
     }
@@ -330,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 9,
    "id": "1bca2076",
    "metadata": {},
    "outputs": [
@@ -338,7 +367,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "🔌 Connection closed.\n"
+      "Cursor closed.\n",
+      "Database connection closed.\n"
      ]
     }
    ],
